--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --hot --port 8080 --config webpack.config.dev.js",
-    "build": "yarn build:live",
+    "build": "webpack --config webpack.config.dev.js",
     "test": "jest",
     "lint": "yarn lint:eslint && yarn lint:prettier && yarn lint:stylelint && yarn lint:typecheck",
     "lint:eslint": "eslint .",
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
