--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "start": "webpack serve --hot --port 8080 --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.dev.js",
     "test": "jest",
-    "lint": "yarn lint:eslint && yarn lint:prettier && yarn lint:stylelint && yarn lint:typecheck",
-    "lint:eslint": "eslint .",
-    "lint:prettier": "prettier --check .",
-    "lint:stylelint": "stylelint **/*.scss",
+    "lint": "eslint .",
     "lint:typecheck": "tsc --noEmit -p .",
-    "fmt": "yarn fmt:prettier && yarn fmt:eslint",
-    "fmt:eslint": "eslint --fix .",
-    "fmt:prettier": "prettier --write ."
+    "fmt": "eslint --fix ."
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
