--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "resolveJsonModule": true
   },
   "include": [
-    "./src/**/*"
+    "./src/**/*.ts",
+    "./src/types.d.ts"
   ],
   "$schema": "https://json.schemastore.org/tsconfig"
 }
