--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
